fixed media queries to work on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -87,15 +87,18 @@ table tr {
   text-align: center;
   float: left;
 }
-@media(min-width: 915px){
-.card{
-  background: white;
-  width: 25%;
-  height: 100%; 
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  text-align: center;
-  float: left;
+
+@media screen (min-width: 915px){
+  .card{
+    background: white;
+    width: 25%;
+    height: 100%; 
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    text-align: center;
+    float: left;
+  }
 }
+
 }
 .card-text{
   overflow-y: scroll;
